# Helping-hands-together

./: .Dorkerignore  .env.example  .gitignore  .replit  README.md  WARP.md  admin.py  app.py  auth.py  config.py  forms.py  init_db.py  main.py  migrate_payment_methods.py  models.py  payments.py  pyproject.toml  replit.md  requirements.txt  runtime.txt  security_utils.py  test_payments.py
attached_assets/: Pasted--Helping-Hand-Together-Flask-Crowdfunding-Starter-What-this-contains-summary-This-rep-1759735563667_1759735563668.txt  Pasted--Serving-Flask-app-main-Debug-mode-on-WARNING-This-is-a-development-server-Do-not-use-it--1759743027621_1759743027623.txt  Pasted--Serving-Flask-app-main-Debug-mode-on-WARNING-This-is-a-development-server-Do-not-use-it-1759761444273_1759761444275.txt  Pasted--home-runner-workspace-pythonlibs-lib-python3-11-site-packages-flask-sqlalchemy-model-py-144-SAWar-1759740938545_1759740938545.txt  Pasted-172-31-97-2-06-Oct-2025-10-05-46-GET-admin-users-HTTP-1-1-200-172-31-97-2-06-Oct-20-1759745252714_1759745252715.txt  content-1759764375525.md  content-1759765090409.md  content-1759767574314.md  content-1759768545063.md
migrations/versions/: 784aba52c281_add_payment_method_to_donation.py  baa8ddf19c4d_fix_donation_relationship.py
scripts/: create_admin.py
templates/: about.html  bank_transfer.html  base.html  campaign.html  campaigns.html  contact.html  create_campaign.html  donation_success.html  index.html  login.html  manual_payment.html  news_detail.html  news_list.html  profile.html  register.html  user_profile.html
(+18 files in other folders)
