
[tool.poetry]
name = "helping-hand-together"
version = "1.0.0"
description = "Charity Crowdfunding Platform"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.11.0,<3.12"
Flask = "^3.0.0"
Flask-SQLAlchemy = "^3.1.1"
Flask-Migrate = "^4.0.5"
Flask-Login = "^0.6.3"
Flask-WTF = "^1.2.1"
Flask-Mail = "^0.9.1"
email-validator = "^2.1.0"
python-dotenv = "^1.0.0"
Werkzeug = "^3.0.1"
Pillow = "^10.1.0"
requests = "^2.31.0"
psycopg2-binary = "^2.9.9"
gunicorn = "^21.2.0"
WTForms = "^3.1.1"

[tool.pyright]
useLibraryCodeForTypes = true
exclude = [".cache"]

[tool.ruff]
select = ['E', 'W', 'F', 'I', 'B', 'C4', 'ARG', 'SIM']
ignore = ['W291', 'W292', 'W293']

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
